--- a/1_floats/css/index.css
+++ b/1_floats/css/index.css
@@ -96,6 +96,47 @@ body{
       margin-top: 50px;
 
   }
+
+  /* exercise 4 */
+  body {
+    height: 5000px;
+  }
+  .left3 {
+    width: 50%;
+    background-color: purple;
+  }
+  .right3 {
+    width: 50%;
+    background-color: green;
+  }
+  .relative {
+    background-color: lightblue;
+    height: 250px;
+    padding: 30px;
+    margin: 10px;
+    display: flex;
+    position: relative;
+  }
+  .absolute {
+    height: 150px;
+    width: 150px;
+    background-color: red;
+    color: white;
+    position: absolute;
+   bottom: 0;
+   right: 0;
+  
+  }
+  .fixed {
+    height: 200px;
+    width: 200px;
+    background-color: green;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+  
+  }
+
  
 
  
